--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 fastapi = {extras = ["all"], version = "^0.110.0"}
+transformers = {extras = ["torch"], version = "^4.38.1"}
+pillow = "^10.2.0"
 
 
 [build-system]
