--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.10"
 fastapi = {extras = ["all"], version = "^0.110.0"}
 qdrant-client = "^1.7.3"
 loguru = "^0.7.2"
+requests = "^2.31.0"
 
 
 [build-system]
